20230912 Office JBFG Data Analysis Competition

--- a/data_analysis/2023_jbfg_competition/dataline_v3.2.ipynb
+++ b/data_analysis/2023_jbfg_competition/dataline_v3.2.ipynb
@@ -24,11 +24,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
     "#!pip install watermark\n",
     "%load_ext watermark\n",
-    "%watermark -a 'DataLine' -nmv --packages numpy,pandas,sklearn,imblearn,tensorflow,plotly,matplotlib,seaborn,missingno\n",
-    "'''"
+    "%watermark -a 'DataLine' -nmv --packages numpy,pandas,sklearn,imblearn,tensorflow,plotly,matplotlib,seaborn,missingno"
    ]
   },
   {
@@ -322,8 +320,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 데이터 개략 확인 함수\n",
-    "- 데이터 건수, null 비율 등으로 변경해서 사용하면 좋을 듯함."
+    "#### 컬럼 데이터 및 Null 건수 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def change_format(df, column, format):\n",
+    "    if format == 'comma':\n",
+    "        df[column] = df[column].apply(lambda x: f\"{x:,}\")\n",
+    "    elif format == 'percent':\n",
+    "        df[column] = df[column].apply(lambda x: f\"{x:.2%}\")\n",
+    "        \n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def count_column_na_count(df, column):\n",
+    "    '''\n",
+    "    '''\n",
+    "    column_na_counts = df[column].size, df[column].count(), df[column].isnull().sum()\n",
+    "    column_na_counts_df = pd.Series(column_na_counts).to_frame().T\n",
+    "    column_na_counts_df.columns = ['tot_counts', 'data_counts', 'null_counts']\n",
+    "    column_na_counts_df['data_percents'] = column_na_counts_df['data_counts'].values/column_na_counts_df['tot_counts'].values\n",
+    "    column_na_counts_df['null_percents'] = column_na_counts_df['null_counts'].values/column_na_counts_df['tot_counts'].values\n",
+    "\n",
+    "\n",
+    "    column_na_counts_df = change_format(column_na_counts_df, 'tot_counts', 'comma')\n",
+    "    column_na_counts_df = change_format(column_na_counts_df, 'data_counts','comma')\n",
+    "    column_na_counts_df = change_format(column_na_counts_df, 'null_counts','comma')\n",
+    "    column_na_counts_df = change_format(column_na_counts_df, 'data_percents', 'percent')\n",
+    "    column_na_counts_df = change_format(column_na_counts_df, 'null_percents', 'percent')\n",
+    "\n",
+    "    print(column_na_counts_df.to_string(index=False))\n",
+    "    print('-'*70)\n",
+    "\n",
+    "\n",
+    "def count_column_data_count(df, column):\n",
+    "    ''' \n",
+    "    '''\n",
+    "    # column_data_countcounts = df.groupby(column)['is_churned'].value_counts().unstack()\n",
+    "\n",
+    "\n",
+    "    column_counts = df.groupby(column)['is_churned'].value_counts().unstack()\n",
+    "    column_counts = column_counts.rename(columns={0: 'exist_counts', 1: 'churned_counts'})\n",
+    "    column_counts['total_counts'] =  column_counts['exist_counts'] + column_counts['churned_counts']\n",
+    "    column_counts = column_counts.fillna(0)\n",
+    "\n",
+    "    column_percents = df.groupby(column)['is_churned'].value_counts(normalize=True).unstack()\n",
+    "    column_percents = column_percents.rename(columns={0: 'exist_percents', 1: 'churned_percents'})\n",
+    "    column_percents = column_percents.fillna(0)\n",
+    "\n",
+    "\n",
+    "    column_count_percent = pd.concat([column_counts, column_percents], axis=1)\n",
+    "    column_count_percent = column_count_percent.reset_index()\n",
+    "    column_count_percent = column_count_percent.sort_values(by='churned_percents', ascending=False)\n",
+    "\n",
+    "    \n",
+    "    column_count_percent = change_format(column_count_percent, 'exist_counts', 'comma')\n",
+    "    column_count_percent = change_format(column_count_percent, 'churned_counts', 'comma')\n",
+    "    column_count_percent = change_format(column_count_percent, 'total_counts', 'comma')\n",
+    "    column_count_percent = change_format(column_count_percent, 'exist_percents', 'percent')\n",
+    "    column_count_percent = change_format(column_count_percent, 'churned_percents', 'percent')\n",
+    "    \n",
+    "\n",
+    "    print(column_count_percent.to_string(index=False))"
    ]
   },
   {
@@ -1193,7 +1256,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
     "fig = make_subplots(\n",
     "    rows=2, cols=2,subplot_titles=('','<b>Platinum Card Holders','<b>Blue Card Holders<b>','Residuals'),\n",
     "    vertical_spacing=0.09,\n",
@@ -1246,8 +1308,7 @@
     "    title_text=\"<b>Distribution Of Gender And Different Card Statuses<b>\",\n",
     ")\n",
     "\n",
-    "fig.show()\n",
-    "'''"
+    "fig.show()"
    ]
   },
   {
@@ -1464,10 +1525,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
     "sns.pairplot(hue = 'is_churned', data = bank_churner_df)\n",
-    "plt.show()\n",
-    "'''"
+    "plt.show()"
    ]
   },
   {
@@ -1547,10 +1606,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
     "sns.pairplot(hue = 'is_churned', data = bank_churner_df)\n",
-    "plt.show()\n",
-    "'''"
+    "plt.show()"
    ]
   },
   {
@@ -1934,7 +1991,6 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from lightgbm import LGBMClassifier\n",
     "from xgboost import XGBClassifier\n",
     "\n",
     "#Create a list of tuples with the model name and the classifier instance\n",
@@ -1945,7 +2001,6 @@
     "    ('KNN', KNeighborsClassifier(n_neighbors=5)),\n",
     "    ('Naive Bayes', GaussianNB()),\n",
     "    ('Random Forest', RandomForestClassifier(n_estimators=10, criterion='entropy', random_state=0)),\n",
-    "    ('LightGBM', LGBMClassifier(n_estimators=500, random_state=42, boosting_type='GOSS')),    \n",
     "    ('Xg Boost', XGBClassifier())\n",
     "]\n",
     "\n",
@@ -2024,7 +2079,6 @@
     "    ('KNN', KNeighborsClassifier(n_neighbors=5)),\n",
     "    ('Naive Bayes', GaussianNB()),\n",
     "    ('Random Forest', RandomForestClassifier(n_estimators=10, criterion='entropy', random_state=0)),\n",
-    "    ('LightGBM', LGBMClassifier(n_estimators=500, random_state=42, boosting_type='GOSS')),    \n",
     "    ('Xg Boost', XGBClassifier())\n",
     "]\n",
     "\n",
@@ -2156,7 +2210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# bank_churner_df = pd.read_csv(\"./data/bank_churner.csv\")"
+    "bank_churner_df = pd.read_csv(\"./data/bank_churner.csv\")"
    ]
   },
   {
@@ -2173,12 +2227,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "\n",
     "# 테스트 데이터 전처리\n",
     "\n",
     "def test_transform(x_test):\n",
-    "    # \n",
+    "    ''' 전처리 함수 정의'''\n",
     "    \n",
     "    # 불필요 컬럼 제거(고객번호)\n",
     "    # -------------------------\n",
@@ -2227,9 +2279,7 @@
     "    x_test.drop(columns = ['mean_util_pct'], inplace=True)\n",
     "    x_test.dropna(axis=0, inplace=True)\n",
     "        \n",
-    "    return x_test\n",
-    "    \n",
-    "'''"
+    "    return x_test"
    ]
   },
   {
@@ -2238,7 +2288,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
     "bank_churner_df = test_transform(bank_churner_df)\n",
     "\n",
     "y=bank_churner_df['is_churned']\n",
@@ -2253,8 +2302,7 @@
     "#Normalization\n",
     "sc=StandardScaler()\n",
     "X_train=sc.fit_transform(X_train)\n",
-    "X_test=sc.transform(X_test)\n",
-    "'''"
+    "X_test=sc.transform(X_test)"
    ]
   },
   {
@@ -2263,11 +2311,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
     "from sklearn.model_selection import train_test_split\n",
     "# Split the data into training and test sets\n",
-    "X_train,X_test,y_train,y_test=train_test_split(X_new,y,test_size=0.25,stratify=y,random_state=0)\n",
-    "'''"
+    "X_train,X_test,y_train,y_test=train_test_split(X_new,y,test_size=0.25,stratify=y,random_state=0)"
    ]
   },
   {
@@ -2276,7 +2322,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
     "#DEEP LEARNING\n",
     "\n",
     "# Scale the data with StandardScaler\n",
@@ -2351,8 +2396,16 @@
     "plt.ylabel('True positive rate')\n",
     "plt.title('ROC curve (zoomed in at top left)')\n",
     "plt.legend(loc='best')\n",
-    "plt.show()\n",
-    "'''\n"
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auc_keras"
    ]
   },
   {
