--- a/data_analysis/2023_jbfg_competition/build_data_v0.2.ipynb
+++ b/data_analysis/2023_jbfg_competition/build_data_v0.2.ipynb
@@ -2,11 +2,467 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bank_df = pd.read_csv(\"./data/bank_churner.csv\")\n",
+    "kaggle_df = pd.read_csv(\"./data/BankChurner_kaggle.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kaggle_df = kaggle_df.iloc[:,:-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kaggle_df['Attrition_Flag']=kaggle_df['Attrition_Flag'].replace({'Existing Customer':0,'Attrited Customer':1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kaggle_df.columns = bank_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kaggle_df.to_csv('./data/test_churner_kaggle_all.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cstno</th>\n",
+       "      <th>is_churned</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>dependent_num</th>\n",
+       "      <th>education</th>\n",
+       "      <th>marital_stat</th>\n",
+       "      <th>imcome_cat</th>\n",
+       "      <th>card_type</th>\n",
+       "      <th>mon_on_book</th>\n",
+       "      <th>...</th>\n",
+       "      <th>months_inact_for_12m</th>\n",
+       "      <th>contact_cnt_for_12m</th>\n",
+       "      <th>credit_line</th>\n",
+       "      <th>tot_revol_balance</th>\n",
+       "      <th>mean_open_to_buy</th>\n",
+       "      <th>tot_amt_ratio_q4_q1</th>\n",
+       "      <th>tot_trans_amt_for_12m</th>\n",
+       "      <th>tot_trans_cnt_for_12m</th>\n",
+       "      <th>tot_cnt_ratio_q4_q1</th>\n",
+       "      <th>mean_util_pct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>768805383</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>M</td>\n",
+       "      <td>3</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>$60K - $80K</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>39</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12691.0</td>\n",
+       "      <td>777</td>\n",
+       "      <td>11914.0</td>\n",
+       "      <td>1.335</td>\n",
+       "      <td>1144</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1.625</td>\n",
+       "      <td>0.061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>818770008</td>\n",
+       "      <td>0</td>\n",
+       "      <td>49</td>\n",
+       "      <td>F</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>Less than $40K</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>44</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8256.0</td>\n",
+       "      <td>864</td>\n",
+       "      <td>7392.0</td>\n",
+       "      <td>1.541</td>\n",
+       "      <td>1291</td>\n",
+       "      <td>33</td>\n",
+       "      <td>3.714</td>\n",
+       "      <td>0.105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>713982108</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>M</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>$80K - $120K</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>36</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3418.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3418.0</td>\n",
+       "      <td>2.594</td>\n",
+       "      <td>1887</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2.333</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>769911858</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>F</td>\n",
+       "      <td>4</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Less than $40K</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>34</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3313.0</td>\n",
+       "      <td>2517</td>\n",
+       "      <td>796.0</td>\n",
+       "      <td>1.405</td>\n",
+       "      <td>1171</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2.333</td>\n",
+       "      <td>0.760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>709106358</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>M</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Uneducated</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>$60K - $80K</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>21</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4716.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4716.0</td>\n",
+       "      <td>2.175</td>\n",
+       "      <td>816</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2.500</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10122</th>\n",
+       "      <td>772366833</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>$40K - $60K</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>40</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4003.0</td>\n",
+       "      <td>1851</td>\n",
+       "      <td>2152.0</td>\n",
+       "      <td>0.703</td>\n",
+       "      <td>15476</td>\n",
+       "      <td>117</td>\n",
+       "      <td>0.857</td>\n",
+       "      <td>0.462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10123</th>\n",
+       "      <td>710638233</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Divorced</td>\n",
+       "      <td>$40K - $60K</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4277.0</td>\n",
+       "      <td>2186</td>\n",
+       "      <td>2091.0</td>\n",
+       "      <td>0.804</td>\n",
+       "      <td>8764</td>\n",
+       "      <td>69</td>\n",
+       "      <td>0.683</td>\n",
+       "      <td>0.511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10124</th>\n",
+       "      <td>716506083</td>\n",
+       "      <td>1</td>\n",
+       "      <td>44</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>Less than $40K</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>36</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5409.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5409.0</td>\n",
+       "      <td>0.819</td>\n",
+       "      <td>10291</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.818</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10125</th>\n",
+       "      <td>717406983</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>$40K - $60K</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>36</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5281.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5281.0</td>\n",
+       "      <td>0.535</td>\n",
+       "      <td>8395</td>\n",
+       "      <td>62</td>\n",
+       "      <td>0.722</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10126</th>\n",
+       "      <td>714337233</td>\n",
+       "      <td>1</td>\n",
+       "      <td>43</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>Less than $40K</td>\n",
+       "      <td>Silver</td>\n",
+       "      <td>25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10388.0</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>8427.0</td>\n",
+       "      <td>0.703</td>\n",
+       "      <td>10294</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0.649</td>\n",
+       "      <td>0.189</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10127 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           cstno  is_churned  age sex  dependent_num    education  \\\n",
+       "0      768805383           0   45   M              3  High School   \n",
+       "1      818770008           0   49   F              5     Graduate   \n",
+       "2      713982108           0   51   M              3     Graduate   \n",
+       "3      769911858           0   40   F              4  High School   \n",
+       "4      709106358           0   40   M              3   Uneducated   \n",
+       "...          ...         ...  ...  ..            ...          ...   \n",
+       "10122  772366833           0   50   M              2     Graduate   \n",
+       "10123  710638233           1   41   M              2      Unknown   \n",
+       "10124  716506083           1   44   F              1  High School   \n",
+       "10125  717406983           1   30   M              2     Graduate   \n",
+       "10126  714337233           1   43   F              2     Graduate   \n",
+       "\n",
+       "      marital_stat      imcome_cat card_type  mon_on_book  ...  \\\n",
+       "0          Married     $60K - $80K      Blue           39  ...   \n",
+       "1           Single  Less than $40K      Blue           44  ...   \n",
+       "2          Married    $80K - $120K      Blue           36  ...   \n",
+       "3          Unknown  Less than $40K      Blue           34  ...   \n",
+       "4          Married     $60K - $80K      Blue           21  ...   \n",
+       "...            ...             ...       ...          ...  ...   \n",
+       "10122       Single     $40K - $60K      Blue           40  ...   \n",
+       "10123     Divorced     $40K - $60K      Blue           25  ...   \n",
+       "10124      Married  Less than $40K      Blue           36  ...   \n",
+       "10125      Unknown     $40K - $60K      Blue           36  ...   \n",
+       "10126      Married  Less than $40K    Silver           25  ...   \n",
+       "\n",
+       "       months_inact_for_12m  contact_cnt_for_12m  credit_line  \\\n",
+       "0                         1                    3      12691.0   \n",
+       "1                         1                    2       8256.0   \n",
+       "2                         1                    0       3418.0   \n",
+       "3                         4                    1       3313.0   \n",
+       "4                         1                    0       4716.0   \n",
+       "...                     ...                  ...          ...   \n",
+       "10122                     2                    3       4003.0   \n",
+       "10123                     2                    3       4277.0   \n",
+       "10124                     3                    4       5409.0   \n",
+       "10125                     3                    3       5281.0   \n",
+       "10126                     2                    4      10388.0   \n",
+       "\n",
+       "       tot_revol_balance  mean_open_to_buy  tot_amt_ratio_q4_q1  \\\n",
+       "0                    777           11914.0                1.335   \n",
+       "1                    864            7392.0                1.541   \n",
+       "2                      0            3418.0                2.594   \n",
+       "3                   2517             796.0                1.405   \n",
+       "4                      0            4716.0                2.175   \n",
+       "...                  ...               ...                  ...   \n",
+       "10122               1851            2152.0                0.703   \n",
+       "10123               2186            2091.0                0.804   \n",
+       "10124                  0            5409.0                0.819   \n",
+       "10125                  0            5281.0                0.535   \n",
+       "10126               1961            8427.0                0.703   \n",
+       "\n",
+       "       tot_trans_amt_for_12m  tot_trans_cnt_for_12m  tot_cnt_ratio_q4_q1  \\\n",
+       "0                       1144                     42                1.625   \n",
+       "1                       1291                     33                3.714   \n",
+       "2                       1887                     20                2.333   \n",
+       "3                       1171                     20                2.333   \n",
+       "4                        816                     28                2.500   \n",
+       "...                      ...                    ...                  ...   \n",
+       "10122                  15476                    117                0.857   \n",
+       "10123                   8764                     69                0.683   \n",
+       "10124                  10291                     60                0.818   \n",
+       "10125                   8395                     62                0.722   \n",
+       "10126                  10294                     61                0.649   \n",
+       "\n",
+       "       mean_util_pct  \n",
+       "0              0.061  \n",
+       "1              0.105  \n",
+       "2              0.000  \n",
+       "3              0.760  \n",
+       "4              0.000  \n",
+       "...              ...  \n",
+       "10122          0.462  \n",
+       "10123          0.511  \n",
+       "10124          0.000  \n",
+       "10125          0.000  \n",
+       "10126          0.189  \n",
+       "\n",
+       "[10127 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kaggle_df"
    ]
   },
   {
@@ -1386,7 +1842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
