--- a/data_analysis/2023_jbfg_competition/dataline_v10.5_competition_ml.ipynb
+++ b/data_analysis/2023_jbfg_competition/dataline_v10.5_competition_ml.ipynb
@@ -10,50 +10,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Author: DataLine\n",
-      "\n",
-      "Python implementation: CPython\n",
-      "Python version       : 3.9.18\n",
-      "IPython version      : 8.15.0\n",
-      "\n",
-      "numpy     : 1.24.3\n",
-      "pandas    : 2.0.3\n",
-      "sklearn   : 1.3.0\n",
-      "imblearn  : 0.0\n",
-      "tensorflow: 2.10.0\n",
-      "plotly    : 5.9.0\n",
-      "matplotlib: 3.7.2\n",
-      "seaborn   : 0.12.2\n",
-      "missingno : 0.5.1\n",
-      "lightgbm  : 3.3.5\n",
-      "\n",
-      "Compiler    : MSC v.1916 64 bit (AMD64)\n",
-      "OS          : Windows\n",
-      "Release     : 10\n",
-      "Machine     : AMD64\n",
-      "Processor   : Intel64 Family 6 Model 165 Stepping 3, GenuineIntel\n",
-      "CPU cores   : 12\n",
-      "Architecture: 64bit\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"\\n#!pip install watermark\\n%load_ext watermark\\n%watermark -a 'DataLine' -nmv --packages numpy,pandas,sklearn,imblearn,tensorflow,plotly,matplotlib,seaborn,missingno,lightgbm\\n\""
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "'''\n",
     "#!pip install watermark\n",
     "%load_ext watermark\n",
-    "%watermark -a 'DataLine' -nmv --packages numpy,pandas,sklearn,imblearn,tensorflow,plotly,matplotlib,seaborn,missingno,lightgbm"
+    "%watermark -a 'DataLine' -nmv --packages numpy,pandas,sklearn,imblearn,tensorflow,plotly,matplotlib,seaborn,missingno,lightgbm\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +60,7 @@
        "'\\n# 데이터 포맷 함수\\n# ---------------\\ndef change_format(df, column, format):\\n    \\'\\'\\'\\n    데이터프레임의 지정된 컬럼에 컴마, 백분율로 변경하여 데이터프레임을 반환하는 함수\\n        Args:\\n            df (df) : DataFrame\\n            column (str) : column of DataFrame\\n            format (str) : \\'comma\\' | \\'percent\\'\\n        Return:\\n            DataFrame\\n    \\'\\'\\'\\n    if format == \\'comma\\':\\n        df[column] = df[column].apply(lambda x: f\"{x:,}\")\\n    elif format == \\'percent\\':\\n        df[column] = df[column].apply(lambda x: f\"{x:.2%}\")\\n        \\n    return df\\n\\n\\n# 데이터프레임의 특정 컬럼에 대한 건수, Null, Percent 표시\\n# -----------------------------------------------------\\ndef count_column_na_count(df, column):\\n    \\'\\'\\'\\n    데이터프레임의 특정 컬럼에 대한 건수, Null, Percent를 출력하는 함수\\n        Args:\\n            df (df) : DataFrame\\n            column (str) : column of DataFrame\\n        Return:\\n            None\\n    \\'\\'\\'\\n    column_na_counts = df[column].size, df[column].count(), df[column].isnull().sum()\\n    column_na_counts_df = pd.Series(column_na_counts).to_frame().T\\n    column_na_counts_df.columns = [\\'tot_counts\\', \\'data_counts\\', \\'null_counts\\']\\n    column_na_counts_df[\\'data_percents\\'] = column_na_counts_df[\\'data_counts\\'].values/column_na_counts_df[\\'tot_counts\\'].values\\n    column_na_counts_df[\\'null_percents\\'] = column_na_counts_df[\\'null_counts\\'].values/column_na_counts_df[\\'tot_counts\\'].values\\n\\n\\n    column_na_counts_df = change_format(column_na_counts_df, \\'tot_counts\\', \\'comma\\')\\n    column_na_counts_df = change_format(column_na_counts_df, \\'data_counts\\',\\'comma\\')\\n    column_na_counts_df = change_format(column_na_counts_df, \\'null_counts\\',\\'comma\\')\\n    column_na_counts_df = change_format(column_na_counts_df, \\'data_percents\\', \\'percent\\')\\n    column_na_counts_df = change_format(column_na_counts_df, \\'null_percents\\', \\'percent\\')\\n\\n    print(column_na_counts_df.to_string(index=False))\\n    print(\\'-\\'*70)\\n\\n\\ndef count_column_data_count(df, column):\\n    \\'\\'\\' \\n    \\'\\'\\'\\n    # column_data_countcounts = df.groupby(column)[\\'is_churned\\'].value_counts().unstack()\\n\\n\\n    column_counts = df.groupby(column)[\\'is_churned\\'].value_counts().unstack()\\n    column_counts = column_counts.rename(columns={0: \\'exist_counts\\', 1: \\'churned_counts\\'})\\n    column_counts[\\'total_counts\\'] =  column_counts[\\'exist_counts\\'] + column_counts[\\'churned_counts\\']\\n    column_counts = column_counts.fillna(0)\\n\\n    column_percents = df.groupby(column)[\\'is_churned\\'].value_counts(normalize=True).unstack()\\n    column_percents = column_percents.rename(columns={0: \\'exist_percents\\', 1: \\'churned_percents\\'})\\n    column_percents = column_percents.fillna(0)\\n\\n\\n    column_count_percent = pd.concat([column_counts, column_percents], axis=1)\\n    column_count_percent = column_count_percent.reset_index()\\n    column_count_percent = column_count_percent.sort_values(by=\\'churned_percents\\', ascending=False)\\n\\n    \\n    column_count_percent = change_format(column_count_percent, \\'exist_counts\\', \\'comma\\')\\n    column_count_percent = change_format(column_count_percent, \\'churned_counts\\', \\'comma\\')\\n    column_count_percent = change_format(column_count_percent, \\'total_counts\\', \\'comma\\')\\n    column_count_percent = change_format(column_count_percent, \\'exist_percents\\', \\'percent\\')\\n    column_count_percent = change_format(column_count_percent, \\'churned_percents\\', \\'percent\\')\\n    \\n\\n    print(column_count_percent.to_string(index=False))\\n\\n'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +219,7 @@
        "\"\\ndef tot_column_counts(df):\\n    ''' \\n    '''\\n    data_counts = df.count()\\n    null_counts = df.isnull().sum()\\n    tot_counts_df = pd.concat([data_counts, null_counts], axis=1)\\n    tot_counts_df = tot_counts_df.rename(columns={0: 'data_counts', 1: 'null_counts'})\\n    tot_counts_df.insert(0,'tot_counts', tot_counts_df['data_counts'] + tot_counts_df['null_counts'])\\n    tot_counts_df['data_percents'] = tot_counts_df['data_counts'].values / tot_counts_df['tot_counts'].values\\n    tot_counts_df['null_percents'] = tot_counts_df['null_counts'].values / tot_counts_df['tot_counts'].values\\n    tot_counts_df = tot_counts_df.sort_values(by='null_percents', ascending=False)\\n\\n    tot_counts_df = change_format(tot_counts_df, 'tot_counts', 'comma')\\n    tot_counts_df = change_format(tot_counts_df, 'data_counts','comma')\\n    tot_counts_df = change_format(tot_counts_df, 'null_counts','comma')\\n    tot_counts_df = change_format(tot_counts_df, 'data_percents', 'percent')\\n    tot_counts_df = change_format(tot_counts_df, 'null_percents', 'percent')\\n\\n    tot_counts_df = tot_counts_df.reset_index()\\n\\n    print(tot_counts_df.to_string(index=False))\\n    \\n\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +643,7 @@
        "'\\n# 결과 저장소 초기화\\n# -----------------\\nmodel_comparison = {}  #Dictionary to store the comparison metrics of models\\nmodel_eval_comparison = {}                        \\ndrop_no = 1\\nstart_time = time.time()\\n\\n\\nml_churner_df = test_transform(ml_churner_df)\\nafter_drop_cnt = len(ml_churner_df)\\n\\n# ML 데이터 분리\\n# --------------\\nX=ml_churner_df.drop([\\'is_churned\\'],axis=1)\\ny=ml_churner_df[\\'is_churned\\']\\n\\n\\n# 중요 Feature Column 선택\\n# -----------------------\\n# X_new, selected_columns = select_feature(X, y, \\'Xg Boost\\')\\nX_new, selected_columns = select_feature(X, y, \\'ExtraTrees\\')\\n\\n\\n# Train and Test 데이터 생성 및 가공\\n# ---------------------------------\\nX_train, y_train, X_test, y_test = proc_smote(X_new, y)\\nX_train_for_normalization = X_train.copy()\\nafter_smote_cnt = len(X_train)\\n\\n\\n# Normalization\\n# -------------\\nX_train, X_test = proc_normalization(X_train, X_test)    \\n\\n\\n# Pridict 및 Test 평가\\n# --------------------\\nproc_type=\\'T\\'\\ntest_auc = fit_predict_eval(proc_type, drop_no, model_comparison, X_train, y_train, X_test, y_test)\\n\\n\\n# 예측 및 테스트 로그 출력\\n# ----------------------\\ncur_datetime = datetime.datetime.now().strftime(\\'%Y-%m-%d %H:%M:%S\\')\\nend_time = time.time()\\ndelta_time = end_time - start_time\\nprint(f\\'[테스트] {cur_datetime}, {str(datetime.timedelta(seconds=delta_time)).split(\".\")[0]}, [{proc_type}_{drop_no}], AUC: {test_auc:0.6f}, tot_cnt: {tot_cnt:<6}, after_drop_cnt : {after_drop_cnt:<6}, after_smote_cnt: {after_smote_cnt:<6}, X_train:{X_train.shape}, y_train:{y_train.shape}, X_test:{X_test.shape}, y_test:{y_test.shape}\\')\\n\\n\\n# print_eval_result(model_comparison)\\n\\n'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,15 +743,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[테스트] 2023-09-17 12:40:05, 0:00:03, [E_1], Model Name: LightGBM          , BEST AUC: 0.989888, AUC: 0.989888\n",
-      "[평  가] 2023-09-17 12:40:05, 0:00:04, [E_1], AUC: 0.989888, tot_cnt: 2026  , after_drop_cnt : 2026  , X_eval: (2026, 13), y_eval:(2026,)\n"
+      "[테스트] 2023-09-17 19:47:06, 0:00:07, [E_1], Model Name: LightGBM          , BEST AUC: 0.989888, AUC: 0.989888\n",
+      "[평  가] 2023-09-17 19:47:06, 0:00:09, [E_1], AUC: 0.989888, tot_cnt: 2026  , after_drop_cnt : 2026  , X_eval: (2026, 13), y_eval:(2026,)\n"
      ]
     }
    ],
@@ -834,50 +815,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_e9f84_row0_col0, #T_e9f84_row0_col1, #T_e9f84_row0_col2, #T_e9f84_row0_col3, #T_e9f84_row0_col4 {\n",
+       "#T_95064_row0_col0, #T_95064_row0_col1, #T_95064_row0_col2, #T_95064_row0_col3, #T_95064_row0_col4 {\n",
        "  background-color: yellow;\n",
        "  color: black;\n",
        "}\n",
-       "#T_e9f84_row0_col5, #T_e9f84_row0_col6 {\n",
+       "#T_95064_row0_col5, #T_95064_row0_col6 {\n",
        "  background-color: yellow;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_e9f84\">\n",
+       "<table id=\"T_95064\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_e9f84_level0_col0\" class=\"col_heading level0 col0\" >Accuracy</th>\n",
-       "      <th id=\"T_e9f84_level0_col1\" class=\"col_heading level0 col1\" >Accuracy-No</th>\n",
-       "      <th id=\"T_e9f84_level0_col2\" class=\"col_heading level0 col2\" >Accuracy-Yes</th>\n",
-       "      <th id=\"T_e9f84_level0_col3\" class=\"col_heading level0 col3\" >F1-Score</th>\n",
-       "      <th id=\"T_e9f84_level0_col4\" class=\"col_heading level0 col4\" >CV AUC</th>\n",
-       "      <th id=\"T_e9f84_level0_col5\" class=\"col_heading level0 col5\" >CV std</th>\n",
-       "      <th id=\"T_e9f84_level0_col6\" class=\"col_heading level0 col6\" >AUC</th>\n",
+       "      <th id=\"T_95064_level0_col0\" class=\"col_heading level0 col0\" >Accuracy</th>\n",
+       "      <th id=\"T_95064_level0_col1\" class=\"col_heading level0 col1\" >Accuracy-No</th>\n",
+       "      <th id=\"T_95064_level0_col2\" class=\"col_heading level0 col2\" >Accuracy-Yes</th>\n",
+       "      <th id=\"T_95064_level0_col3\" class=\"col_heading level0 col3\" >F1-Score</th>\n",
+       "      <th id=\"T_95064_level0_col4\" class=\"col_heading level0 col4\" >CV AUC</th>\n",
+       "      <th id=\"T_95064_level0_col5\" class=\"col_heading level0 col5\" >CV std</th>\n",
+       "      <th id=\"T_95064_level0_col6\" class=\"col_heading level0 col6\" >AUC</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_e9f84_level0_row0\" class=\"row_heading level0 row0\" >LightGBM_E_1</th>\n",
-       "      <td id=\"T_e9f84_row0_col0\" class=\"data row0 col0\" >96.25%</td>\n",
-       "      <td id=\"T_e9f84_row0_col1\" class=\"data row0 col1\" >97.53%</td>\n",
-       "      <td id=\"T_e9f84_row0_col2\" class=\"data row0 col2\" >89.60%</td>\n",
-       "      <td id=\"T_e9f84_row0_col3\" class=\"data row0 col3\" >96.27%</td>\n",
-       "      <td id=\"T_e9f84_row0_col4\" class=\"data row0 col4\" >99.39%</td>\n",
-       "      <td id=\"T_e9f84_row0_col5\" class=\"data row0 col5\" >0.011514</td>\n",
-       "      <td id=\"T_e9f84_row0_col6\" class=\"data row0 col6\" >0.989888</td>\n",
+       "      <th id=\"T_95064_level0_row0\" class=\"row_heading level0 row0\" >LightGBM_E_1</th>\n",
+       "      <td id=\"T_95064_row0_col0\" class=\"data row0 col0\" >96.25%</td>\n",
+       "      <td id=\"T_95064_row0_col1\" class=\"data row0 col1\" >97.53%</td>\n",
+       "      <td id=\"T_95064_row0_col2\" class=\"data row0 col2\" >89.60%</td>\n",
+       "      <td id=\"T_95064_row0_col3\" class=\"data row0 col3\" >96.27%</td>\n",
+       "      <td id=\"T_95064_row0_col4\" class=\"data row0 col4\" >99.39%</td>\n",
+       "      <td id=\"T_95064_row0_col5\" class=\"data row0 col5\" >0.011514</td>\n",
+       "      <td id=\"T_95064_row0_col6\" class=\"data row0 col6\" >0.989888</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x20b51d5c040>"
+       "<pandas.io.formats.style.Styler at 0x1ff05ef6a30>"
       ]
      },
      "metadata": {},
