20231106 Office JBFG Data Analysis Competition

--- a/data_analysis/2023_jbfg_competition/temp_v0.11.ipynb
+++ b/data_analysis/2023_jbfg_competition/temp_v0.11.ipynb
@@ -1,6 +1,88 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 데이터 건수 및 널 현황 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_column_na_count(eda_churner_df, 'age')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "* 데이터 속성별 상세 현황"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 연속형 그래프로 확인"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 범주화하여 범주형 그래프로 확인"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 범주형 그래프로 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_column_data_count(eda_churner_df, 'age')\n",
+    "change_categorical_data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 탐색적 데이터 분석 측면\n",
+    "    - 이탈하지 않은 고객의 카드 보유 갯수의 중앙값은 4개이고 이탈한 고객의 중앙값은 3개임.\n",
+    "    - 카드의 개수가 적을수록 이탈율이 높아지므로 3 ~ 4개 이상의 카드를 보유할 수 있도록 노력 필요\n",
+    "- ML 전처리 측면    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Known 필드 처리 방법\n",
+    "이상치 처리\n",
+    "\"카드 한도 범주\" 와 카드종류로 그래프 그리기 - Scattor\n",
+    "리볼빙 잔액 좀 더 분석"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
