--- a/data_analysis/2023_jbfg_competition/build_data_0.1.ipynb
+++ b/data_analysis/2023_jbfg_competition/build_data_0.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "bank_df = pd.read_csv(\"./data/bank_churner.csv\")\n",
-    "kaggle_df = pd.read_csv(\"./data/BankChurner_kaggle.csv\")"
+    "kaggle_df = pd.read_csv(\"./data/original_test_bankchurner.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "[8101 rows x 21 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kaggle_df['Attrition_Flag']=kaggle_df['Attrition_Flag'].replace({'Existing Customer':0,'Attrited Customer':1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -497,33 +506,33 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 10127 entries, 0 to 10126\n",
+      "RangeIndex: 2026 entries, 0 to 2025\n",
       "Data columns (total 21 columns):\n",
       " #   Column                 Non-Null Count  Dtype  \n",
       "---  ------                 --------------  -----  \n",
-      " 0   cstno                  10127 non-null  int64  \n",
-      " 1   is_churned             10127 non-null  object \n",
-      " 2   age                    10127 non-null  int64  \n",
-      " 3   sex                    10127 non-null  object \n",
-      " 4   dependent_num          10127 non-null  int64  \n",
-      " 5   education              10127 non-null  object \n",
-      " 6   marital_stat           10127 non-null  object \n",
-      " 7   imcome_cat             10127 non-null  object \n",
-      " 8   card_type              10127 non-null  object \n",
-      " 9   mon_on_book            10127 non-null  int64  \n",
-      " 10  tot_product_count      10127 non-null  int64  \n",
-      " 11  months_inact_for_12m   10127 non-null  int64  \n",
-      " 12  contact_cnt_for_12m    10127 non-null  int64  \n",
-      " 13  credit_line            10127 non-null  float64\n",
-      " 14  tot_revol_balance      10127 non-null  int64  \n",
-      " 15  mean_open_to_buy       10127 non-null  float64\n",
-      " 16  tot_amt_ratio_q4_q1    10127 non-null  float64\n",
-      " 17  tot_trans_amt_for_12m  10127 non-null  int64  \n",
-      " 18  tot_trans_cnt_for_12m  10127 non-null  int64  \n",
-      " 19  tot_cnt_ratio_q4_q1    10127 non-null  float64\n",
-      " 20  mean_util_pct          10127 non-null  float64\n",
-      "dtypes: float64(5), int64(10), object(6)\n",
-      "memory usage: 1.6+ MB\n"
+      " 0   cstno                  2026 non-null   int64  \n",
+      " 1   is_churned             2026 non-null   int64  \n",
+      " 2   age                    2026 non-null   int64  \n",
+      " 3   sex                    2026 non-null   object \n",
+      " 4   dependent_num          2026 non-null   int64  \n",
+      " 5   education              2026 non-null   object \n",
+      " 6   marital_stat           2026 non-null   object \n",
+      " 7   imcome_cat             2026 non-null   object \n",
+      " 8   card_type              2026 non-null   object \n",
+      " 9   mon_on_book            2026 non-null   int64  \n",
+      " 10  tot_product_count      2026 non-null   int64  \n",
+      " 11  months_inact_for_12m   2026 non-null   int64  \n",
+      " 12  contact_cnt_for_12m    2026 non-null   int64  \n",
+      " 13  credit_line            2026 non-null   float64\n",
+      " 14  tot_revol_balance      2026 non-null   int64  \n",
+      " 15  mean_open_to_buy       2026 non-null   float64\n",
+      " 16  tot_amt_ratio_q4_q1    2026 non-null   float64\n",
+      " 17  tot_trans_amt_for_12m  2026 non-null   int64  \n",
+      " 18  tot_trans_cnt_for_12m  2026 non-null   int64  \n",
+      " 19  tot_cnt_ratio_q4_q1    2026 non-null   float64\n",
+      " 20  mean_util_pct          2026 non-null   float64\n",
+      "dtypes: float64(5), int64(11), object(5)\n",
+      "memory usage: 332.5+ KB\n"
      ]
     }
    ],
@@ -2077,7 +2086,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
