--- a/data_analysis/2023_jbfg_competition/select_feature_importance.ipynb
+++ b/data_analysis/2023_jbfg_competition/select_feature_importance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -137,10 +137,11 @@
       "       'tot_trans_amt_for_12m', 'tot_trans_cnt_for_12m', 'tot_cnt_ratio_q4_q1',\n",
       "       'mean_util_pct'],\n",
       "      dtype='object')\n",
-      "Model Name: LASSO, col_count: 13, Selected Col: Index(['age', 'mon_on_book', 'tot_product_count', 'months_inact_for_12m',\n",
-      "       'contact_cnt_for_12m', 'credit_line', 'tot_revol_balance',\n",
-      "       'mean_open_to_buy', 'tot_amt_ratio_q4_q1', 'tot_trans_amt_for_12m',\n",
-      "       'tot_trans_cnt_for_12m', 'tot_cnt_ratio_q4_q1', 'mean_util_pct'],\n",
+      "Model Name: LASSO, col_count: 14, Selected Col: Index(['age', 'dependent_num', 'mon_on_book', 'tot_product_count',\n",
+      "       'months_inact_for_12m', 'contact_cnt_for_12m', 'credit_line',\n",
+      "       'tot_revol_balance', 'mean_open_to_buy', 'tot_amt_ratio_q4_q1',\n",
+      "       'tot_trans_amt_for_12m', 'tot_trans_cnt_for_12m', 'tot_cnt_ratio_q4_q1',\n",
+      "       'mean_util_pct'],\n",
       "      dtype='object')\n",
       "Model Name: RFE, col_count: 14, Selected Col: Index(['age', 'dependent_num', 'mon_on_book', 'tot_product_count',\n",
       "       'months_inact_for_12m', 'contact_cnt_for_12m', 'credit_line',\n",
@@ -154,11 +155,10 @@
       "       'tot_trans_amt_for_12m', 'tot_trans_cnt_for_12m', 'tot_cnt_ratio_q4_q1',\n",
       "       'mean_util_pct'],\n",
       "      dtype='object')\n",
-      "Model Name: LGBMR, col_count: 14, Selected Col: Index(['age', 'dependent_num', 'mon_on_book', 'tot_product_count',\n",
-      "       'months_inact_for_12m', 'contact_cnt_for_12m', 'credit_line',\n",
-      "       'tot_revol_balance', 'mean_open_to_buy', 'tot_amt_ratio_q4_q1',\n",
-      "       'tot_trans_amt_for_12m', 'tot_trans_cnt_for_12m', 'tot_cnt_ratio_q4_q1',\n",
-      "       'mean_util_pct'],\n",
+      "Model Name: LGBMR, col_count: 13, Selected Col: Index(['age', 'mon_on_book', 'tot_product_count', 'months_inact_for_12m',\n",
+      "       'contact_cnt_for_12m', 'credit_line', 'tot_revol_balance',\n",
+      "       'mean_open_to_buy', 'tot_amt_ratio_q4_q1', 'tot_trans_amt_for_12m',\n",
+      "       'tot_trans_cnt_for_12m', 'tot_cnt_ratio_q4_q1', 'mean_util_pct'],\n",
       "      dtype='object')\n",
       "Model Name: XGB, col_count: 14, Selected Col: Index(['age', 'dependent_num', 'mon_on_book', 'tot_product_count',\n",
       "       'months_inact_for_12m', 'contact_cnt_for_12m', 'credit_line',\n",
@@ -206,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
