20231110 Office Review Java

--- a/Programming/Java/newlec_Java/1. newlec_자바 프로그래밍.md
+++ b/Programming/Java/newlec_Java/1. newlec_자바 프로그래밍.md
@@ -1,3 +1,9 @@
+## 0. 이클립스 - 핫키
+- Ctrl + Shift + o : import package
+- Ctrl + Shift + F : 코드 정렬
+- Alt + 이동키 : 행 이동
+
+
 ## 1. 자바 프로그램밍
 ### 프로그래밍과 프로그래밍 언어
 - 모든 버전의 공통분모인 자바 프로그램밍
@@ -23,8 +29,8 @@
 ## 5. 자바 IDE 이클립스 사용하여 코딩하기
 - Project를 생성하는 이유 
 	- 이클립스 필요에 의해서 생성 
-- Ctrl + Shift + F
-- Alt + 이동키
+- Ctrl + Shift + F : 코드 정렬
+- Alt + 이동키 : 행 이동
 
 ## 6. 자바 언어의 특징 
 - Green Project(Stealth Project)
@@ -52,20 +58,20 @@
 	- 완전한 객체지향 언어 
 	
 ## 7. 자바 플랫폼(Platform)의 특징
-- 새로운 WORA API의 탄생 - platform independent 
+- 새로운 WORA(Write Once Run Anywhere) API의 탄생 - platform independent 
 - A 운영체제, B 운영체제, C 운영체제(운영체제별 API가 다름) ---> 자바플랫폼 ---> 자바코드 
 - 단점
 	- 특정 운영체제에서만 가지고 있는 특징을 자바 플랫폼에 다 구현 하지 못함.
 	- 자바 플랫폼을 설치해야 함.
 
 ## 8. 자바 번역기의 특징 
-### WORA를 지원하기 위한 자바 프로그래밍 방법
-- 자바코드 ---> 번역기(어셈블코드) ---> 번역기(기계(이진)코드
+### WORA(Write Once Run Anywhere)를 지원하기 위한 자바 프로그래밍 방법
+- 자바코드 ---> 번역기(어셈블코드) ---> 번역기(기계(이진)코드)
 - 1단계(형태소 분석) -> 2단계(구문분석) -> 3단계(의미분석) -> 4단계(중간코드) -> 5단계(최적화) -> 6단계(물리코드)
-	------- 컴파일러 사용 -----------------------------------> ---- 인터프리터 사용 ------------>
+	------- 컴파일러 사용 --------------------------------------------------> ---- 인터프리터 사용 --------->
 
 - 자바코드 -> 번역기 -> 바이트코드(중간코드, 가상CPU 코드, 수도코드) -> 번역기 -> 어셈블코드 -> 번역기 -> 기계(이진)코드
-	<-------- JDK(Java Development Kit) ---> <---- JRE(Java Runtime Environment) ------->
+	<-------------- JDK(Java Development Kit) --------------------> <---- JRE(Java Runtime Environment) ------->
 
 ## 9. 값의 종류와 표현방법 
 - 정수값 - int, long -  26, 0x1a, 032, 0b11010
@@ -80,30 +86,37 @@
 - 값의 종류와 형식명칭
 	- 정수 형식과 변환
 		- byte   : 1byte - 26
-		- short  : 2byte - 26
-		- int    : 4byte - 26
-		- long   : 8byte - 26L
+		- short  : 2bytes - 26
+		- int    : 4bytes - 26 - default
+		- long   : 8bytes - 26L
 		- long x = 30;
 			- long x = 30L 이 표현이 맞지만 묵시적으로 30L로 변환됨
 		- byte x = 30;
 			- 묵시적으로 변경하지 않음 - 컴파일시 형식이 맞지 않다고 오류
 			- 개발자가 byte x = (byte)30; - 개발자가 명시적으로 형식 
 	- 실수 형식 
+		- float   : 4bytes
+		- double  : 8bytes - default
+
 		- 26.5 = 2.65e1
 		- float x = 3.5;   ---> float x = (float)3.5;
 		- double x = 3.5f;
 	
-	- 문자형식
-		- char 
+	- 문자형식 - 2bytes
+		- char : 'A', '\u0065' 
 	
-	- 부울형식
-		- boolean 
+	- 부울형식 - 1byte
+		- boolean : true(0), false(1)
 
 ## 12. 정수 값의 크기와 범위 
 	- 
 
 ## 13. 부동 소수점(Float Point) 실수의 크기와 범위 
-	- 
+	- 고정 소수점(Fixed Point) 표현방식의 4바이트 실수
+	- 부동 소수점(Float Point) 표현방식의 4바이트 실수
+		- 부호비트(1bit)
+		- 지수부(7bit)
+		- 가수부(23bit)
 
 ## 14. 자바 변수 선언
 	- 선언이란? 모든 키워드는 선언하고 사용해야만 한다.
@@ -152,12 +165,13 @@
 		- System.out.print("hello");
 		- System.out.print(3.45);
 
-## 18. Escape 문자		
+## 18. Escape 문자
+	- \b, \t, \n, \f, \r, \', \", \\		
 
 ## 19. 출력 문자열 format과 숫자 출력 - printf
 	- 성적 출력
 		- 출력 포맷을 이용한 출력 
-	- 포맷 문자열과 형식 지정자 
+	- 포맷 문자열과 형식지정자 
 		- 값의 표현 방식을 지정하는 코드 
 			- string : %s
 			- float : %f 
@@ -169,6 +183,8 @@
 			- e - 지수형 실수   - %e
 			- c - 문자        - %c
 			- s - 문자열       - %10s
+			- b - boolean
+		- printf("%s %d %f %c", "hello, 3, 5.6, 'a');
 
 ## 20. 형식지정자 옵션 
 	- 고정길이 출력하기 
@@ -183,7 +199,7 @@
 		- avg = (float)(total / 3.0); ---> 명시적으로 계산결과를 float형으로 형변환하고 이를 float형인 avg로 저장 
 		- avg = total / 3.0f; ---> 정수를 float형으로 나누는 결과가 되면 묵시적으로 total 정수는 float형으로 형변환
 
-## 21. 콘솔 입력미래에셋증권 연금자산관리센터 바로가기
+## 21. 콘솔 입력
 	- InputStream과 객체 생성 
 		- System.in
 			- int code = System.in.read() - 1byte에 해당하는 코드값을 입력 
@@ -197,13 +213,35 @@
 			- skip()
 		- Scanner scan = new Scanner(System.in);
 			- nextLine() - buffer에 있는 모든 문자 read
-			- next() - 단어 별로 read
+			- next() - 단어 단위로 read
 			- nextInt()
 			- nextFloat()
-			- nextDouble(0
+			- nextDouble()
 			
 ## 22. 산술 연산자(Operators)
-	- 
+	- 연산자 우선순위
+		- 3 + 2 * 3
+		- (3 + 2) * 3
+	- 연산자와 자료형
+		- 10/3
+		- 10/3.0 - 묵시적으로 형변환 - 손실되지 않도록 형변환
+		- 묵시적 & 명시적 형변환
+			- avg = total / 3.0f          - 묵시적 형변환
+			- avg = (float) (total / 3.0) - 명시적 형변환
+	- 나머지 연산자
+		- % : 나머지
+		- 10 / 3 = 3
+		- 10 % 3 = 나머지값 저장  
+	- 단항 연산자
+		- 양수 연산자 : int result = +1;
+		- 음수 연산자 : result = -result;
+		- 증가 연산자 : result++;
+		- 감소 연산자 : result--;
+		- 부정 연산자 : !success;
+	- 단항 연산자의 전위화 후위 연산
+		- 언제 단항연산자가 실행되는지 주의
+
+
 ## 23. 비교/관계 연산자
 	- 비교 연산자
 		- ==, !=, >, >=, <, <=
@@ -235,7 +273,7 @@
 				
 	
 ## 25. 복합 대입 연산자와 연산자 우선순위
-	- +=, -=, *=, /=, %=, &=, |=, >>=, <<=
+	- += : X = X + 3를 X+= 2로  ㅌ +1, -=, *=, /=, %=, &=, |=, >>=, <<=
 	- 기타 연산자
 		- 3항 연산자
 			- value3 = (3 < 1) ? value1 : value2
@@ -257,30 +295,85 @@
 	- 코드의 반복을 위한 흐름제어 
 
 ## 27. if와 while문
-	- 
+	- if (조건문) {
+		수행문;
+	  }
+	
+	- while (조건문) {
+		수행문;
+	  }
 
-## 28. 제어구조 do while 문
-	- do 
-	  while();
+## 28. do while 문
+	- do {
+		수행문;
+	} while(조건문);
 
-## 29. 제어구조 for 문
-	- 
+## 29. for 문
+	- for (int i=0; i<cnt; i++) {
+		수행문;
+	  }
+	
+	- for (; i<3; ) {
+		수행문;
+	  }
+
+	- for (; true; ) {		// 무한루프 ~ 바람직 하지 않음
+		수행문;
+	  }
+
+	- for (;;) {			// 무한루프 ~ 바람직 하지 않음
+		수행문;
+	  }
+
+	- for (int x=0, int y=0; x < 0; x++, y=x) {
+		수행문;
+	  }
 
 ## 30. 프로그래머가 수학을 못하면 만들게 되는 코드 #1
 	- 합을 구하는 프로그램 만들기 
 		- Sn = n(2a + (n-1)d)/2
 		- Sn = n(a+l)/2
 
-## 31. 코드의 반복을 위한 흐름제어 
-	- 
+## 31. 제어구조 else if, else
+	- if (조건문) {
+		수행문;
+	  }
+	  else if (조건문) {
+		수행문;
+	  }
+	  else {
+		수행문;
+	  }
 
 ## 32. 제어구조 switch와 break 라벨문 
 	- else if 문의 문제점 
 		- 분기점이 많으면 프로그램이 길어짐. 마지막 조건문은 앞을 다 확인한후 나중에 비교됨.
 	- switch문을 이용한 선택흐름
-		- 
-	- 중첩된 제어구조 벗어나기
+		- switch(menu) {
+			case 1:              
+				수행문;
+				break;
+			case 2:
+				수행문;
+				break;				
+			case 3:
+				수행문;
+				break;				
+			default:
+				수행문;
+		}
+
+	- 중첩된 제어구조 벗어나기 (while 내에 switch에서 while까지 벗어나기)
 		- break 라벨;
+
+        - 라벨:
+		  while { 
+			for { 
+				switch {
+					break 라벨;
+				}
+			}
+		  }
 
 ## 33. 제어구조 continue와 break문
 	- 건너뛰기(continue)와 중단하기(break)
@@ -303,18 +396,34 @@
 
 ## 36. 다차원 배열
 	- 국어 성적을 여러 개 저장하기 위한 더 큰 단위의 저장소 
-		- int[] kors1
-		- int[] kors2
-		- int[] kors3
-		- int[] kors
-		- kors[3*0]
-		- kors[3*1]
-		- kors[3*2]
+		- 1학년/2학년/3학년 국어성적 관리 : 배열을 3개 만들어 관리
+			- int[] kors1
+			- int[] kors2
+			- int[] kors3
+
+		- 1학년/2학년/3학년 국어성적 관리 : 한개의 배열을 이용하여 숫자로 관리
+			- int[] kors
+			- kors[3*0]		// 1학년
+			- kors[3*1]		// 2학년    
+			- kors[3*2]		// 3학년
+
+			- kors[3*0+0], kors[3*0+1], kors[3*0+2]		// 1학년 국어성적 접근 
+			- kors[3*1+0], kors[3*1+1], kors[3*1+2]		// 2학년 국어성적 접근  
+			- kors[3*2+0], kors[3*2+1], kors[3*2+2]		// 3학년 국어성적 접근  
+
 	- 2차원 배열을 이용한  성적 관리 
 		- int[][] kors = new int[3][3];
 		
 ## 37. 상수형 변수 
 	- 변수와 상수변수
 		- 상수형 변수가 필요한 경우 
-		
-	
+
+		- 상수형 변수 정의(final)
+			- final int N = 1; 	N(1)
+		  	- final int NE = 2; 	NE(2)
+		  	- final int E = 3; 	E(3) 
+		  	- final int SE = 4; 	SE(4)
+		  	- final int S = 5; 	S(5)
+		  	- final int SW = 6; 	SW(6)
+		  	- final int W = 7; 	W(7)
+		  	- final int NW = 8; 	NW(8)
