20231113 Office Review Java Programming

--- a/Programming/Java/newlec_Java/4. newlec_자바 객체지향 프로그래밍.md
+++ b/Programming/Java/newlec_Java/4. newlec_자바 객체지향 프로그래밍.md
@@ -127,15 +127,15 @@
 		- 
 			
 	- 캡슐을 깨지 못하게 하는 도구 : 접근 제어 지시자
-		----------------------------------------------
-		접근지시자     | 동일 클래스 | 파생 클래스 | 외부 클래스
-		----------------------------------------------
-		private    |    O    |     X    |    X  
-		----------------------------------------------
-		protected  |    O    |     O    |    X 
-		----------------------------------------------
-		public     |    O    |     X    |    O
-		----------------------------------------------
+		--------------------------------------------------
+		접근지시자  | 동일 클래스 | 파생 클래스 | 외부 클래스
+		--------------------------------------------------
+		private    |    O       |     X      |    X  
+		--------------------------------------------------
+		protected  |    O       |     O      |    X 
+		--------------------------------------------------
+		public     |    O       |     X      |    O
+		--------------------------------------------------
 	
 ## 06. 생성자(Constructor)		
 	- 객체 초기화
@@ -407,16 +407,19 @@
 				
 		
 ## 14. IS A 상속이란?
-	- has a 상속만으로 만들기
+	- has a 상속으로 만들기
 		- 아이언 봇 만들기 - 모든 부품이 있어서 has a 로 아이언 봇을 만든다.
 			- 머리 [has a]
-			- 몸통 [has a]
+			- 몸통 [has a] - 몸통이 없으면 prototype 몸통을 is a 상속해서 has a 상속으로 몸통 완성
 			- 팔 [has a]
 			- 다리 [has a] 
+	- is a 상속으로 만들기
+		- 로보트를 is a 상속해서 아이엇봇으로 구현
 
 ## 15. Exam을 IS A 상속하기
 	- Exam을 is a 상속하는 NewlecExam 클래스 구현 
-		- newlecture에서는 컴퓨터 과목이 포홤된 시험 점수를 관리해야 함. - Exam에서 관리하는 과목을 추가해야하는 상황
+		- newlecture에서는 컴퓨터 과목이 포홤된 시험 점수를 관리해야 함. 
+			- Exam에서 관리하는 과목을 추가해야하는 상황
 			- Exam은 바이너리만 있음.(소스코드가 없음), 만일, 소스가 있으면 Exam을 수정.
 			- NewlecExam을 만들어서 관리. Exam을 틀(is a)로 쓸지 부품(has a)으로 쓸지 아니면 새로 만들건지 결졍
 				- 같은 Exam이므로 부품(has a)으로 사용하지 못하고 틀(is a)로서 사용해야 함.
@@ -441,7 +444,37 @@
 		- Exam exam = new NewlecExam(); (O) - NewlecExam 내의 Exam을 참조
 		- NewlecExam exam = new Exam(); (X) 
 	- 형식에 따른 재정의 함수 호출 관계
-		-	
+		- 전제조건1
+			- Exam 에 total() 존재
+			- NewlecExam 에 total() 존재할 때,
+
+			- NewlecExam exam1 = new NewlecExam(1,1,1,1);
+			  System.out.println(exam1.total());   ---> 4	
+
+			- Exam exam2 = new NewlecExam(1,1,1,1); 
+			  System.out.println(exam2.total());   ---> 4 ~ 우선권이 NewlecExam.totol()에 있음
+				※ 자바는 참조형식의 함수보다 객체 형식의 함수 호출을 우선으로 한다.
+		
+		- 전제조건2
+			- Exam 에 total() 존재하지 않음
+			- NewlecExam 에 total() 존재할 때,
+
+			- NewlecExam exam1 = new NewlecExam(1,1,1,1);
+			  System.out.println(exam1.total());   ---> 4	
+
+			- Exam exam2 = new NewlecExam(1,1,1,1); 
+			  System.out.println(exam2.total());   ---> 에러 발생,  Exam에 total() 미존재
+
+		- 전제조건3
+			- Exam 에 total() 존재
+			- NewlecExam 에 total() 존재하지 않을 때,
+
+			- NewlecExam exam1 = new NewlecExam(1,1,1,1);
+			  System.out.println(exam1.total());   ---> 3	
+
+			- Exam exam2 = new NewlecExam(1,1,1,1); 
+			  System.out.println(exam2.total());   ---> 3
+
 
 ## 19. 참조형식과 호출되는 메소드의 관계 2 - 메소드의 관계 연습하기
 	- 호출되는 함수의 윛 결정 문제
@@ -454,10 +487,10 @@
 			}
 			
 			pubic class B extends A {
-				public f3() {...}
-				public f5() {...} 는 f3() 호출
-				public f6() {...}
-				public f7() {...}
+				public f3() {...}           	// f3() override
+				public f5() {...} 는 f3() 호출	// f5() override
+				public f6() {...}			   // f6() 새로 정의
+				public f7() {...}			   // f7() 새로 정의
 			}
 			
 			- 문제
@@ -518,8 +551,12 @@
 				System.out.println(total);
 			}
 	- 정적 바인딩 Vs. 동적 바인딩
-		- 정적 바인딩 - 컴파일시 정해지는 바인딩
-		- 동적 바인딩 - 함수가 호출되어 봐야 한다. 실행중에 함수 위치가 결정됨. 객체 전달시점에 결정 - Java 방식
+		- 정적 바인딩 - 컴파일시 함수의 메모리 주소가 정해지는 바인딩 ~ 컴파일러에 의해서 함수 위치(메모리 주소) 결정
+		- 동적 바인딩 - 함수가 호출되어 봐야 한다. 실행중에 함수 위치(메모리 위치)가 결정됨. 
+		               객체 전달시점에 결정 - Java 방식
+					 - 하무함수마다 주소를 테이블로 저장하고 있
+	
+	- 함수의 
 
 
 ## 22. 코드 집중화와 추상화
