20240101 Home Review JavaScript

--- a/Programming/React/처음만난리액트/처음만난리액트.md
+++ b/Programming/React/처음만난리액트/처음만난리액트.md
@@ -113,3 +113,94 @@ const multiply = (a, b) => return a * b;
 
 
 ## 02강. 리액트 시작하기
+
+### (실습) create-react-app
+- Node.js v14.0.0 이상
+- npm v6.14.0 이상
+- VS Code
+
+#### npx - excute npm package binaries
+```shell
+    npx create-react-app <your-project-name>
+
+    npx create-react-app my-app
+```
+
+#### 명령어
+- npm start     // react application start
+
+
+## 03강. JSX
+
+### JSX 개념 - JavaScript & XML
+- A syntax extension to JavaScript
+- JavaScript + XML/HTML
+- JSX 코드
+```jsx
+const element = <h1>Hello, world!</h1>;
+```
+
+### JSX의 역할
+- React.createElement(     // jsx 코드를 javascript로 변환
+    type,
+    [props],
+    [...children]
+)
+
+- jsx를 사용한 코드
+```jsx
+class Hello extends React.Component {
+    render() {
+        return <div>Hello {this.props.toWhat}</div>;
+    }
+}
+
+ReactDOM.render(
+    <Hello toWhat="World" />,
+    document.getElementById('root')
+);
+```
+
+- JSX를 사용하지 않은 코드
+```javascript
+class Hello extends React.Component {
+    render() {
+        return React.createElement('dev', null, `Hello ${this.props.toWhat}`);
+    }
+}
+
+ReactDOM.render(
+    React.createElement(Hello, { toWhat: 'World' }, null),
+    document.getElementById('root')
+);
+```
+
+- React.createElement(     // jsx 코드를 javascript로 변환
+    type,
+    [props],
+    [...children]
+)
+
+- 리액트에서 JSX를 쓰는 것이 필수는 아님!
+- JSX를 사용하면 장점들이 많기 때문에 편리함!
+
+### JSX의 장점
+- 간결한 코드
+- 가독성 향상
+- 버그를 발견하기 쉬움!
+- Injection Attacks 방어(XSS)
+
+### JSX 사용법
+- 
+
+
+## 04강. Rendering Elements
+
+### Elements 란?
+- (요소, 성분) 어떤 물체를 구성하는 성분
+- Elements are the smallest building blocks of React apps.
+- 리액트 앱을 구성하는 가장 작은 블록들
+- Elements는 화면에서 보이는 것들을 기술
+
+#### Elements의 생김새
+- 리액트 Elements는 자바스크립트 객체 형태로 존재
