20240108 Home Review Spring Boot

--- a/Programming/Javascript/[코딩앙마] 자바스크립트 중급 강좌/자바스크립트 중급 강좌.md
+++ b/Programming/Javascript/[코딩앙마] 자바스크립트 중급 강좌/자바스크립트 중급 강좌.md
@@ -1453,4 +1453,239 @@ console.log(x6 instanceof Bmw1);
 console.log(x6.constructor === Bmw1);
 ```
 
+## 15. Class(클래스)
+- ES6에 추가된 스펙
 
+### 객체 생성 - 생성자 함수를 이용하는 방법
+
+```javascript
+const User = function(name, age) {
+    this.name = name;
+    this.age = age;
+    this.showName() {           // 객체 내에 저장됨
+        console.log(this.name);
+    };
+};
+
+
+// 위의 코드를 prototype 으로 변환
+const User = function(name, age) {
+    this.name = name;
+    this.age = age;
+    // this.showName() {           // 객체 내에 저장됨
+    //     console.log(this.name);
+    // };
+};
+
+User.prototype.showName = function () {     // prototype 에 저장 됨
+    console.log(this.name);
+};
+
+const mike = new User('Mike', 30);
+
+// 실수로 new 를 빽먹어도 오류가 나지 않고 undefined로 나옴
+const mike = User('Mike', 30);      // 오류 없이 undefined. class를 사용하는 경우에는 오류 발생
+
+// for ... in 으로 속성 조회
+for(const p in mike) {
+    console.log(p);         // name, age, showName 이 나오나 클래스를 사용하는 경우는 다르게 나옴(아래 참조)
+}
+```
+
+
+### 객체 생성 - class를 이용하는 방법
+```javascript
+class User2 {
+    constructor(name, age) {
+        this.name = age;
+        this.age = age;
+    }
+    showName() {                // showName()은 prototype에 저장됨
+        console.log(this.name);
+    }
+}
+
+const tom = new User2('Tom', 19);
+
+// new 를 생략하면 오류가 나와서 사용자에게 알려줌
+const tom = User2('Tom', 19);
+
+// for ... in 으로 속성 조회
+for(p in tom) {
+    console.log(p);             // name, age 만 나옴
+}
+```
+
+
+### 상속
+
+```javascript
+class Car {
+    constructor(color) {
+        this.color = color;       
+        this.wheels = 4;
+    }
+    drive() {
+        console.log('drive ...');
+    }
+    stop() {
+        console.log('stop ...');
+    }
+}
+
+class Bmw extends Car {
+    park() {
+        console.log('PARK');
+    }
+}
+
+const z4 = new Bmw('blue');
+z4.drive();
+```
+
+
+### 메소드 오버라이딩(method overriding)
+```javascript
+class Car {
+    constructor(color) {
+        this.color = color;       
+        this.wheels = 4;
+    }
+    drive() {
+        console.log('drive ...');
+    }
+    stop() {
+        console.log('stop ...');
+    }
+}
+
+class Bmw extends Car {
+    park() {
+        console.log('PARK');
+    }
+    stop() {
+        super.stop()        // 부모의 stop()을 사용
+        console.log('STOP');    
+    }
+}
+
+const z4 = new Bmw('blue');
+z4.stop();      // 
+```
+
+### 생성자 overriding
+```javascript
+class Car {
+    constructor(color) {
+        this.color = color;       
+        this.wheels = 4;
+    }
+    drive() {
+        console.log('drive ...');
+    }
+    stop() {
+        console.log('stop ...');
+    }
+}
+
+class Bmw extends Car {
+    constructor(color) {
+        super(color);            // 부모클래스의 생성자를 반드시 콜해줘야 하며 인자도 받아서 넘겨 줘야 함.
+        this.navigation = 1;
+    }
+    park() {
+        console.log('PARK');
+    }
+    stop() {
+        super.stop()        // 부모의 stop()을 사용
+        console.log('STOP');    
+    }
+}
+
+const z4 = new Bmw('blue');
+z4.stop();      // 
+```
+
+
+## 16. 프로미스(Promise)
+- const pr = new Promise((resolve, reject) => {     // resolve : 성공한 경우, reject : 실패한 경우
+    // code                                         // 어떤일이 완료된 이후에 수행되는 함수를 callback 함수라 함
+  };)
+
+- new Promise 의 상태
+    - state: pending(대기), result: undefined  -- 성공해서 resolve(value) 호출 --> state: fulfilled(이행됨), result: value
+                                                -- 실패해서  reject(error) 호출 --> state: rejected(거부됨), result: error
+
+```javascript
+// 성공인 경우
+const pr = new Promise((resolve, reject) => {
+    setTimeout(() => {
+        resolve('OK');
+    }, 3000);
+});
+
+// 상태변화 : state:pending(대기), result: undefinded -- After 3 seconds --> state:fulfilled(이행됨), result: 'OK'
+
+// 실패인 경우
+const pr = new Promise((resolve, reject) => {
+    setTimeout(() => {
+        reject(new Error('error..'));
+    }, 3000);
+});
+
+// 상태변화 : state:pending(대기), result: undefinded -- After 3 seconds --> state: rejected(거부됨), result: error
+```
+
+### 생산자, 소비자
+
+```javascript
+// 생산자
+const pr = new Promise((resolve, reject) => {
+    setTimeout(() => {
+        resolve('OK');
+    }, 3000);
+});
+
+// 소비자
+pr.then(
+    function(result) {},    // 이행 되었을 때 실행. result에는 'OK'가 할당되어 있음
+    function(err) {}        // 거부 되었을 때 실행
+)
+```
+
+// 예제
+```javascript
+const pr = new Promise((resolve, reject) => {
+    setTimeout(() => {
+        resolve('OK');
+    }, 3000);
+});
+
+// 소비자
+pr.then(
+    function(result) {          // 이행 되었을 때 실행. result에는 'OK'가 할당되어 있음
+        console.log(result + ' 가지러 가자.');
+    },
+    function(err) {             // 거부 되었을 때 실행
+        console.log('다시 주문해주세요..');
+    }
+);
+
+```
+```javascript
+pr.then(
+    function(result) {},
+    function(err) {}
+);
+와 아래는 동일
+
+pr.then(
+    function(result) {}
+).catch(
+    function(err) {}
+).finally(
+    function () {
+        console.log('--- 주문 끝 ---')
+    }
+)
+```
